--- a/index.html
+++ b/index.html
@@ -11,8 +11,45 @@
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
+
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+				<h2>HTML</h2>
+				<ul>
+					<li>Enter your HTML notes here</li>
+					<li>The head element contains information about the webpage.</li>
+					<li>The body element represents the visible content shown to the user.</li>
+					<li>The list elements represent the bullet points.</li>
+				</ul>
+			</section>
+
+			<section class="card" id="css-section">
+				<h2>CSS</h2>
+				<ul>
+					<li>Enter your CSS notes here</li>
+				</ul>
+			</section>
+
+			<section class="card" id="git-section">
+				<h2>Git</h2>
+				<ul>
+					<li>Enter your Git notes here</li>
+					<li>git status: checks what branch we are currently on</li>
+					<li>git checkout -b branch-name: creates a new branch and switches to it</li>
+					<li>git checkout main: switches to the main branch</li>
+					<li>git pull origin main: pull down the latest changes made on the main branch</li>
+					<li>git add -A: commit all files in the working branch</li>
+					<li>git commit -m "last html changes": commits the last chenges to the branch</li>
+					<li>git push origin feature/add-html: pushes up all of the changes made in feature branch to our main branch</li>
+				</ul>
+			</section>
+
+			<section class="card" id="javascript-section">
+				<h2>JavaScript</h2>
+				<ul>
+					<li>Enter your JavaScript notes here</li>
+				</ul>
+			</section>
     </main>
 
     <footer>
