--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -27,6 +28,10 @@
 				<h2>CSS</h2>
 				<ul>
 					<li>Enter your CSS notes here</li>
+					<li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+					<li>A border assigns a border and indicates what is the width that we want it to be.</li>
+					<li>When we create an external CSS file we need to link it with the HTML file via link that has the attributes rel and href which is added after the last meta property under the head section</li>
 				</ul>
 			</section>
 
