--- a/index.html
+++ b/index.html
@@ -4,63 +4,100 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-			<h2>✨ Open the Console to See What's Happening ✨</h2>
+      <img
+        src="./assets/bowtie-cat.png"
+        alt="Profile image of cat wearing a bow tie."
+      />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
 
     <main>
       <section class="card" id="html-section">
-				<h2>HTML</h2>
-				<ul>
-					<li>Enter your HTML notes here</li>
-					<li>The head element contains information about the webpage.</li>
-					<li>The body element represents the visible content shown to the user.</li>
-					<li>The list elements represent the bullet points.</li>
-				</ul>
-			</section>
+        <h2>HTML</h2>
+        <ul>
+          <li>Enter your HTML notes here</li>
+          <li>The head element contains information about the webpage.</li>
+          <li>
+            The body element represents the visible content shown to the user.
+          </li>
+          <li>The list elements represent the bullet points.</li>
+        </ul>
+      </section>
 
-			<section class="card" id="css-section">
-				<h2>CSS</h2>
-				<ul>
-					<li>Enter your CSS notes here</li>
-					<li>A margin indicates how much space we want around the outside of an element.</li>
-          <li>A padding indicates how much space we want around the content inside an element.</li>
-					<li>A border assigns a border and indicates what is the width that we want it to be.</li>
-					<li>When we create an external CSS file we need to link it with the HTML file via link that has the attributes rel and href which is added after the last meta property under the head section</li>
-				</ul>
-			</section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+          <li>
+            A margin indicates how much space we want around the outside of an
+            element.
+          </li>
+          <li>
+            A padding indicates how much space we want around the content inside
+            an element.
+          </li>
+          <li>
+            A border assigns a border and indicates what is the width that we
+            want it to be.
+          </li>
+          <li>
+            When we create an external CSS file we need to link it with the HTML
+            file via link that has the attributes rel and href which is added
+            after the last meta property under the head section
+          </li>
+        </ul>
+      </section>
 
-			<section class="card" id="git-section">
-				<h2>Git</h2>
-				<ul>
-					<li>Enter your Git notes here</li>
-					<li>git status: checks what branch we are currently on</li>
-					<li>git checkout -b branch-name: creates a new branch and switches to it</li>
-					<li>git checkout main: switches to the main branch</li>
-					<li>git pull origin main: pull down the latest changes made on the main branch</li>
-					<li>git add -A: commit all files in the working branch</li>
-					<li>git commit -m "last html changes": commits the last chenges to the branch</li>
-					<li>git push origin feature/add-html: pushes up all of the changes made in feature branch to our main branch</li>
-				</ul>
-			</section>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>Enter your Git notes here</li>
+          <li>git status: checks what branch we are currently on</li>
+          <li>
+            git checkout -b branch-name: creates a new branch and switches to it
+          </li>
+          <li>git checkout main: switches to the main branch</li>
+          <li>
+            git pull origin main: pull down the latest changes made on the main
+            branch
+          </li>
+          <li>git add -A: commit all files in the working branch</li>
+          <li>
+            git commit -m "last html changes": commits the last chenges to the
+            branch
+          </li>
+          <li>
+            git push origin feature/add-html: pushes up all of the changes made
+            in feature branch to our main branch
+          </li>
+        </ul>
+      </section>
 
-			<section class="card" id="javascript-section">
-				<h2>JavaScript</h2>
-				<ul>
-					<li>Enter your JavaScript notes here</li>
-				</ul>
-			</section>
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+          <li>
+            A variable is a named container that allows us to store data in our
+            code.
+          </li>
+          <li>
+            Control flow is the order in which a computer executes code in a
+            script.
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
       <p>I can code!</p>
     </footer>
-		<script src="./assets/script.js"></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
